--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -13,6 +13,11 @@
 
   gtag('config', 'G-QY2WWKHPX0');
 </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6109969005989860"
+     crossorigin="anonymous">
+  </script>
+
+  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
     <title>{% block title %}Lillehammer Tjenester | Enkelt og grei løsning{% endblock title %}</title>
