--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -306,6 +306,9 @@ $txt: #183b56;
     padding: 0 18px;
     padding-top: 5px;
     padding-bottom: 20px;
+    #map{
+      border-radius: 5px;
+    }
     .text{
       text-align: left;
     }
