--- a/apps/core/templates/core/footer.html
+++ b/apps/core/templates/core/footer.html
@@ -18,8 +18,10 @@
         <div class="footer-links">
             <a href="/vilkaar/">Vilkår</a>
             <a href="/policy/">Policy</a>
+            <a href="/alle-tjenester/">Alle tjenester</a>
+            <a class="nav_order_btn" href="/for-bedrifter/">For bedrifter</a>
         </div>
-        <hr style="background: rgba(255, 255, 255, 0.664);">
+        <hr style="background: rgba(255, 255, 255, 0.664); margin-bottom: 0;">
         <!-- footer bottom -->
         <div class="footerbottom">
             <!-- copyright -->
@@ -30,8 +32,8 @@
             <div class="social-icons">
                 <!-- icons -->
                 <div class="icons">
-                    <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-instagram"></i>
-                    <i onclick="window.location.href='https://www.instagram.com/webiser.no/'" class="fab fa-facebook"></i>
+                    <i onclick="window.location.href='https://www.instagram.com/lillehammertjenester.no/'" class="fab fa-instagram"></i>
+                    <i onclick="window.location.href='https://www.facebook.com/profile.php?id=100090085785878'" class="fab fa-facebook"></i>
                 </div>
             </div>
         </div>
