--- a/apps/core/templates/core/search-results.html
+++ b/apps/core/templates/core/search-results.html
@@ -15,7 +15,7 @@
    <div class="search-search" id="searchSearch">
         <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
         {% csrf_token %}
-        <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+        <input name="q" type="text" placeholder="Hva leter du etter?"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
     </form>
    </div>
     <div class="search-results" style="padding-inline: 6px;">
@@ -47,8 +47,8 @@
                 <div class="no-results-search">
                     <form id="searchFormNoResults" action="{% url 'home_page_search' %}" method="GET">
                        {% csrf_token %}
-                       <div style="display: flex;"><input name="q" type="text" placeholder="Søk blant 500 tjenester"><i onclick="searchIconSubmit1()" class="fa-solid fa-magnifying-glass"></i></div>
-                       <button type="submit">Søk etter tjeneste</button>
+                       <div style="display: flex;"><input name="q" type="text" placeholder="Hva leter du etter?"><i onclick="searchIconSubmit1()" class="fa-solid fa-magnifying-glass"></i></div>
+                       <button type="submit">Søk etter tjenester</button>
                    </form>
                  </div>
             </div>
@@ -82,8 +82,8 @@
             <div class="no-query-search">
                 <form id="searchFormNoQ" action="{% url 'home_page_search' %}" method="GET">
                    {% csrf_token %}
-                   <div style="display: flex;"><input name="q" type="text" placeholder="Søk blant 500 tjenester"><i onclick="searchIconSubmit2()" class="fa-solid fa-magnifying-glass"></i></div>
-                   <button type="submit">Søk etter tjeneste</button>
+                   <div style="display: flex;"><input name="q" type="text" placeholder="Hva leter du etter?"><i onclick="searchIconSubmit2()" class="fa-solid fa-magnifying-glass"></i></div>
+                   <button type="submit">Søk etter tjenester</button>
                </form>
              </div>
         </div>
