--- a/static/scss/store/base.css
+++ b/static/scss/store/base.css
@@ -303,6 +303,9 @@
   padding-top: 5px;
   padding-bottom: 20px;
 }
+.map .content #map {
+  border-radius: 5px;
+}
 .map .content .text {
   text-align: left;
 }
