--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   padding-block: 8px;
+  padding-bottom: 0;
   position: relative;
   background: white;
   box-shadow: -1px 0 5px rgba(20, 20, 20, 0.04);
@@ -10,25 +11,24 @@
   width: 100%;
   padding-inline: 18px;
   margin-top: 7px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 #footer .footer-links a {
-  width: 100%;
+  opacity: 0.8;
+  width: -moz-max-content;
+  width: max-content;
   color: #183b56;
   font-size: 16px;
   cursor: pointer;
-  text-align: center;
+  display: block;
+  margin: 5px 0;
+  padding: 5px 16px;
+  padding-left: 0;
+}
+#footer .footer-links a.nav_order_btn {
+  position: relative;
 }
 #footer .footer-links a:hover {
   text-decoration: underline;
-}
-#footer .footer-links a:first-child {
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
-}
-#footer .footer-links a:last-child {
-  border-left: 1px solid rgba(0, 0, 0, 0.1);
 }
 #footer .footer-links a i {
   transform: translateY(2px) translateX(10px);
@@ -37,8 +37,10 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 40px;
   position: relative;
+  background: rgb(246, 246, 246);
+  padding-block: 16px;
 }
 #footer .footerbottom .social-icons {
   width: auto;
@@ -138,22 +140,14 @@
   }
   #footer .footer-links {
     width: 100%;
-    padding-inline: 20px;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+    padding-inline: 18px;
   }
   #footer .footer-links a {
     color: #183B56;
     font-size: 16px;
     opacity: 0.8;
     cursor: pointer;
-  }
-  #footer .footer-links a:first-child {
-    border-right: 1px solid lightgrey;
-  }
-  #footer .footer-links a:last-child {
-    border: none;
+    display: block;
   }
   #footer .footer-links a:hover {
     text-decoration: underline;
