--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -8,6 +8,7 @@ $txt: #183b56;
     width: 100%;
     height: 100%;
     padding-block: 8px;
+    padding-bottom: 0;
     position: relative;
     background: white;
     box-shadow: -1px 0 5px rgba(20,20,20,0.04);
@@ -15,23 +16,33 @@ $txt: #183b56;
         width: 100%;
         padding-inline: 18px;
         margin-top: 7px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         a{
-            width: 100%;
+            opacity: 0.8;
+            width: max-content;
             color: $txt;
             font-size: 16px;
             cursor: pointer;
-            text-align: center;
+            display: block;
+            margin: 5px 0;
+            padding: 5px 16px;
+            padding-left: 0;
+            &.nav_order_btn{
+                position: relative;
+                // &::after{
+                //     content: '';
+                //     display: block;
+                //     position: absolute;
+                //     right: 6px;
+                //     top: 5px;
+                //     background: $primBtn;
+                //     opacity: 0.6;
+                //     border-radius: 100%;
+                //     width: 7px;
+                //     height: 7px;
+                // }
+            }
             &:hover{
                 text-decoration: underline;
-            }
-            &:first-child{
-                border-right: 1px solid rgba(0,0,0,0.1);
-            }
-            &:last-child{
-                border-left: 1px solid rgba(0,0,0,0.1);
             }
             i{
                 transform: translateY(2px) translateX(10px);
@@ -43,8 +54,10 @@ $txt: #183b56;
         display: flex;
         align-items: center;
         width: 100%;
-        height: 50px;
+        height: 40px;
         position: relative;
+        background: $white;
+        padding-block: 16px;
         // social icons
         .social-icons{
             width: auto;
@@ -151,21 +164,13 @@ $txt: #183b56;
         border-top: 1px solid rgba(0,0,0,.1);        
         .footer-links{
             width: 100%;
-            padding-inline: 20px;
-            display: flex;
-            justify-content: space-between;
-            text-align: center;
+            padding-inline: 18px;
             a{
                 color: #183B56;
                 font-size: 16px;
                 opacity: 0.8;
                 cursor: pointer;
-                &:first-child{
-                    border-right: 1px solid lightgrey;
-                }
-                &:last-child{
-                    border: none;
-                }
+                display: block;
                 &:hover{
                     text-decoration: underline;
                 }
