--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -4,11 +4,12 @@
 
 #mobileNav {
   width: 100%;
-  height: 68px;
+  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 18px;
+  padding-bottom: 3px;
   position: fixed;
   top: 0;
   z-index: 10000000000000000000;
@@ -19,46 +20,14 @@
   box-shadow: 0 0 5px rgba(15, 15, 15, 0.2);
   transition: 0s;
 }
-#mobileNav.sticky .logo h1 {
-  color: #183b56;
-}
-#mobileNav.sticky .logo h1 span {
-  border-color: #06c484;
-}
-#mobileNav.sticky .logo .logo1 {
-  display: none;
-}
-#mobileNav.sticky .logo .logo2 {
-  display: block;
-}
 #mobileNav.sticky .hamburger span {
   background: #183b56;
 }
 #mobileNav.menu {
   background: #ffffff;
 }
-#mobileNav.menu .logo h1 {
-  color: #183b56;
-}
-#mobileNav.menu .logo h1 span {
-  border-color: #06c484;
-}
-#mobileNav.menu .logo .logo1 {
-  display: none;
-}
-#mobileNav.menu .logo .logo2 {
-  display: block;
-}
 #mobileNav.menu .hamburger span {
   background: #183b56;
-}
-#mobileNav .nav-hamburger-img {
-  position: absolute;
-  right: 0;
-  top: -20px;
-  opacity: 0.4;
-  z-index: 1000;
-  transition: 0.2s;
 }
 #mobileNav .logo {
   transition: 0.8s;
@@ -68,17 +37,13 @@
   height: auto;
   z-index: 1000;
 }
-#mobileNav .logo h1 {
-  color: #183b56;
-  font-size: 16px;
+#mobileNav .logo img {
+  width: 190px;
+  height: auto;
+  transition: 0.3s;
 }
-#mobileNav .logo h1 span {
-  font-size: 12px;
-  border-bottom: 1px solid #06c484;
-  padding-bottom: 3px;
-}
-#mobileNav .logo .logo2 {
-  display: none;
+#mobileNav .logo img:hover {
+  transform: scale(1.05);
 }
 #mobileNav .hamburger {
   padding: 10px;
@@ -98,7 +63,7 @@
   transition: 0.2s;
   margin: 6px auto;
   transform-origin: 25%;
-  opacity: 0.83;
+  opacity: 0.75;
 }
 #mobileNav .hamburger.click {
   border-radius: 50%;
@@ -116,7 +81,7 @@
   background: white;
   height: 110vh;
   position: absolute;
-  top: 68px;
+  top: 60px;
   right: 0;
   width: 100%;
   opacity: 0;
@@ -129,7 +94,7 @@
   z-index: 100000000000000000;
 }
 #mobileNav .sidebar.active {
-  top: 68px;
+  top: 60px;
   right: 0;
   opacity: 1;
   pointer-events: visible;
@@ -137,12 +102,12 @@
 }
 #mobileNav .sidebar .sidebar-search {
   position: absolute;
-  top: -13px;
+  top: -17px;
   left: 0;
   width: 100%;
   padding-inline: 15px;
-  padding-bottom: 15px;
-  padding-top: 15px;
+  padding-bottom: 17px;
+  padding-top: 19px;
   text-align: center;
   z-index: 10000;
   background: white;
