--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -9,6 +9,9 @@ $txt: #183b56;
 }
 #mobileNav{
   background: white;
+  &.sticky{
+    position: fixed;
+  }
 }
 
 
@@ -155,7 +158,7 @@ $txt: #183b56;
       opacity: 1 !important;
       &.sticky{
         position: fixed;
-        top: 68px;
+        top: 60px;
         box-shadow: 0 0 4px rgba(5,5,5,0.12);
       }
      }
@@ -245,7 +248,7 @@ $txt: #183b56;
         text-align: left;
         &.sticky{
           position: fixed;
-          top: calc(136px - 55px);
+          top: 60px;
           box-shadow: 0 0 4px rgba(5,5,5,0.12);
         }
       }
@@ -265,7 +268,7 @@ $txt: #183b56;
       opacity: 1 !important;
       &.sticky{
         position: fixed;
-        top: 0px;
+        top: 60px;
         box-shadow: 0 0 4px rgba(5,5,5,0.12);
       }
       }
