--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -56,7 +56,7 @@
     
 </head>
 <body ontouchstart="">
-    <div id="backToTop" onclick="backToTop()"><i class="fa-solid fa-angle-up"></i></div>
+    <!-- <div id="backToTop" onclick="backToTop()"><i class="fa-solid fa-angle-up"></i></div> -->
     {% include 'popup/cookie.html' %}
     
     {% include 'core/nav.html' %}
