--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -8,14 +8,7 @@
 <script rel="stylesheet" src="{% static '/js/allpr.js' %}" type="text/javascript"></script>
 
 <div class="page">
-    <!-- Only on some pages -->
-    <div class="allpr-search" id="allPrSearch">
-            <form id="allPrForm" action="{% url 'home_page_search' %}" method="GET">
-            {% csrf_token %}
-            <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-        </form>
-    </div>
-    <p class="allpr-q" id="allPrQ">Alle tjenester</p>
+    <p class="allpr-q" id="allPrQ">Alle tjenestene</p>
 
     <div class="services">
         {% for product in products %}
@@ -29,7 +22,9 @@
                 {% endif %}
             </div>
             <div class="name">{{product.name}}</div>
-            <div class="business-name">{{product.business_name}}</div>
+            <div class="address">{{product.address}}</div>
+            <div class="business-name"></i>{{product.business_name}}</div>
+            <div class="short-des"><i class="fa-solid fa-circle-info"></i>{{product.description|slice:":120"}}...</div>
          </div>
          {% endfor %}
     </div>
