--- a/static/scss/page/search.css
+++ b/static/scss/page/search.css
@@ -1,19 +1,16 @@
-#footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#mobileNav {
-  background: white;
-}
-#mobileNav.sticky {
-  position: fixed;
-}
-
 .page .recomendend .services {
   display: flex;
   overflow-x: scroll;
   padding-bottom: 20px;
   margin-bottom: 17px;
+}
+.page .recomendend .services::-webkit-scrollbar {
+  height: 3px;
+  display: none;
+}
+.page .recomendend .services::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(130, 130, 130, 0.2);
 }
 .page .recomendend .service {
   flex: 1 auto;
@@ -79,84 +76,9 @@
   transition: 0.2s;
   filter: brightness(85%);
 }
-.page .search-search {
-  position: absolute;
-  top: 47px;
-  width: 100%;
-  padding-inline: 15px;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  text-align: center;
-  border-bottom: 1px solid rgba(40, 40, 40, 0.1);
-  z-index: 10000;
-  background: white;
-}
-.page .search-search form {
-  display: flex;
-  border: 1px solid rgb(234, 234, 234);
-  border-radius: 4px;
-}
-.page .search-search.sticky {
-  position: fixed;
-  top: 0;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
-}
-.page .search-search button {
-  border: none;
-  background: transparent;
-  position: absolute;
-  right: 42px;
-  top: 29px;
-  padding: 3px 8px;
-  margin: -3px -8px;
-  border-radius: 100%;
-  background: rgba(155, 155, 155, 0.22);
-}
-.page .search-search button i {
-  font-size: 15px;
-  color: rgba(24, 59, 86, 0.662745098);
-}
-.page .search-search input {
-  width: 85%;
-  height: 50px;
-  border: none;
-  outline: none;
-  padding: 7px;
-  background: white;
-  color: #183b56;
-  border-radius: 4px;
-  font-size: 15px;
-}
-.page .search-search input::-moz-placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
-.page .search-search input::placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
-.page .search-search input:focus, .page .search-search input:active {
-  border-width: 2px;
-  border-color: rgb(212, 212, 212);
-}
-.page .no-query #searchQNo {
-  position: absolute;
-  top: 60px;
-  left: 0;
-  width: 100%;
-  height: auto;
-  background: #06c484;
-  color: rgb(246, 246, 246);
-  font-size: 14px;
-  padding: 10px 18px;
-  font-weight: 500;
-  z-index: 10000;
-  opacity: 1 !important;
-}
-.page .no-query #searchQNo.sticky {
-  position: fixed;
-  top: 60px;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+.page .no-query {
+  padding-inline: 18px;
+  padding-top: 95px;
 }
 .page .no-query i {
   color: #06c484;
@@ -231,26 +153,23 @@
   font-weight: normal;
 }
 .page .search-results {
-  padding-top: 245px;
+  padding-top: 128px;
 }
 .page .search-results #searchQYes {
-  position: absolute;
-  top: 127px;
+  position: fixed;
+  top: 60px;
   left: 0;
   width: 100%;
   height: auto;
-  background: #06c484;
-  color: rgb(246, 246, 246);
-  font-size: 14px;
-  padding: 10px 18px;
-  font-weight: 500;
+  background: white;
+  color: #183b56;
+  font-size: 17px;
+  padding: 11px 18px;
+  padding-top: 13px;
+  font-weight: 400;
   z-index: 10000;
   text-align: left;
-}
-.page .search-results #searchQYes.sticky {
-  position: fixed;
-  top: 60px;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  border-block: 1px solid rgba(100, 100, 100, 0.22);
 }
 .page .search-results .no-results #searchQNo {
   position: absolute;
@@ -344,21 +263,26 @@
   font-weight: normal;
 }
 .page .search-results .services {
-  display: flex;
-  flex-wrap: wrap;
+  padding-inline: 12px;
+  padding-bottom: 8px;
+  margin-bottom: 10px;
 }
 .page .search-results .service {
   flex: 1 auto;
   flex: 44%;
-  max-width: 167px;
+  max-width: 420px;
   height: -moz-min-content;
   height: min-content;
-  padding: 0;
-  margin: 18px 10px;
+  margin: 35px 0;
+  padding: 4px;
+  border-radius: 4px;
+}
+.page .search-results .service:first-child {
+  margin-top: 0;
 }
 .page .search-results .service .service-image {
   width: 100%;
-  height: 105px;
+  height: 195px;
   -o-object-fit: cover;
      object-fit: cover;
   filter: brightness(90%);
@@ -372,33 +296,57 @@
 .page .search-results .service .reviews p {
   margin-bottom: 0;
   color: #FFBC55;
-  font-size: 11px;
+  font-size: 13px;
   margin-top: 1px;
 }
 .page .search-results .service .reviews p i {
   transform: translateY(-0.9px);
   margin-right: 3px;
-  font-size: 9px;
+  font-size: 10px;
 }
 .page .search-results .service .reviews span {
   color: rgb(170, 170, 170);
-  font-size: 10px;
+  font-size: 12px;
   transform: translateX(4px) translateY(2px);
 }
 .page .search-results .service .name {
-  font-size: 14px;
+  font-size: 19px;
   color: #183b56;
-  font-weight: 500;
-  margin-bottom: 1px;
+  font-weight: 600;
 }
 .page .search-results .service .business-name {
   font-size: 11px;
   color: #183b56;
   opacity: 0.7;
   font-weight: 500;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 3px;
+  margin: -2px;
+  transform: translateY(4px);
+  background: rgba(110, 110, 110, 0.1);
+  border-radius: 4px;
+  margin-block: 3px 13px;
 }
-.page .search-results .service:hover .name {
-  text-decoration: underline;
+.page .search-results .service .address {
+  font-size: 14px;
+  color: #183b56;
+  font-weight: 400;
+  margin-top: 1px;
+}
+.page .search-results .service .short-des {
+  margin-top: 5px;
+  font-size: 14px;
+  color: #183b56;
+  opacity: 0.7;
+}
+.page .search-results .service .short-des i {
+  margin-right: 6px;
+  opacity: 0.75;
+  font-size: 13px;
+}
+.page .search-results .service:hover {
+  background: white;
 }
 .page .search-results .service:hover .service-image {
   transition: 0.2s;
