--- a/static/scss/page/search.scss
+++ b/static/scss/page/search.scss
@@ -4,17 +4,6 @@ $primBtn: #06c484;
 $txt: #183b56;
 
 
-#footer{
-  border-top: 1px solid rgba(0,0,0,0.1);
-}
-#mobileNav{
-  background: white;
-  &.sticky{
-    position: fixed;
-  }
-}
-
-
 .page{
   .recomendend{
   .services{
@@ -22,6 +11,14 @@ $txt: #183b56;
     overflow-x: scroll;
     padding-bottom: 20px;
     margin-bottom: 17px;
+    &::-webkit-scrollbar{
+      height: 3px;
+      display: none;
+  }
+  &::-webkit-scrollbar-thumb{
+      border-radius: 10px;
+      background-color: rgba(130, 130, 130, 0.2);
+  }
   }
   .service{
     flex: 1 auto;
@@ -86,82 +83,9 @@ $txt: #183b56;
       }
 }
 }
-  .search-search{
-    position: absolute;
-    top: 47px;
-    width: 100%;
-    padding-inline: 15px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    text-align: center;
-    border-bottom: 1px solid rgba(40,40,40,0.1);
-    z-index: 10000;
-    background: white;
-    form{
-      display: flex;
-      border: 1px solid rgb(234,234,234);
-      border-radius: 4px;
-    }
-    &.sticky{
-        position: fixed;
-        top: 0;
-        box-shadow: 0 0 4px rgba(5,5,5,0.12);
-    }
-    button{
-        border: none;
-        background: transparent;
-        position: absolute;
-        right: 42px;
-        top: 29px;
-        padding: 3px 8px;
-        margin: -3px -8px;
-        border-radius: 100%;
-        background: rgba(155, 155, 155, 0.22);
-        i{
-            font-size: 15px;
-            color: #183b56a9;
-        }
-    }
-    input{
-      width: 85%;
-      height: 50px;
-      border: none;
-      outline: none;
-      padding: 7px;
-      background: white;
-      color: $txt;
-      border-radius: 4px;
-      font-size: 15px;
-      &::placeholder{
-        color: $txt;
-        opacity: 0.8;
-      }
-      &:focus, &:active{
-        border-width: 2px;
-        border-color: rgb(212, 212, 212);
-      }
-    }
-  }
   .no-query{
-    #searchQNo{
-      position: absolute;
-      top: 60px;
-      left: 0;
-      width: 100%;
-      height: auto;
-      background: $primBtn;
-      color: $white;
-      font-size: 14px;
-      padding: 10px 18px;
-      font-weight: 500;
-      z-index: 10000;
-      opacity: 1 !important;
-      &.sticky{
-        position: fixed;
-        top: 60px;
-        box-shadow: 0 0 4px rgba(5,5,5,0.12);
-      }
-     }
+    padding-inline: 18px;
+    padding-top: 95px;
      i{
       color: $primBtn;
       font-size: 40px;
@@ -232,25 +156,22 @@ $txt: #183b56;
     }
   }
   .search-results{
-    padding-top: 245px;
+    padding-top: 128px;
       #searchQYes{
-        position: absolute;
-        top: 127px;
+        position: fixed;
+        top: 60px;
         left: 0;
         width: 100%;
         height: auto;
-        background: $primBtn;
-        color: $white;
-        font-size: 14px;
-        padding: 10px 18px;
-        font-weight: 500;
+        background: white;
+        color: $txt;
+        font-size: 17px;
+        padding: 11px 18px;
+        padding-top: 13px;
+        font-weight: 400;
         z-index: 10000;
         text-align: left;
-        &.sticky{
-          position: fixed;
-          top: 60px;
-          box-shadow: 0 0 4px rgba(5,5,5,0.12);
-        }
+        border-block: 1px solid rgba(100,100,100,0.22);
       }
       .no-results{
     #searchQNo{
@@ -342,19 +263,24 @@ $txt: #183b56;
       }
       }
       .services{
-        display: flex;
-        flex-wrap: wrap;
+        padding-inline: 12px;
+        padding-bottom: 8px;
+        margin-bottom: 10px;
       }
       .service{
         flex: 1 auto;
         flex: 44%;
-        max-width: 167px;
+        max-width: 420px;
         height: min-content;
-        padding: 0;
-        margin: 18px 10px;
+        margin: 35px 0;
+        padding: 4px;
+        border-radius: 4px;
+        &:first-child{
+          margin-top: 0;
+        }
         .service-image{
           width: 100%;
-          height: 105px;
+          height: 195px;
           object-fit: cover;
           filter: brightness(90%);
           border-radius: 4px;
@@ -366,36 +292,57 @@ $txt: #183b56;
           p{
             margin-bottom: 0;
             color: #FFBC55;
-            font-size: 11px;
+            font-size: 13px;
             margin-top: 1px;
             i{
               transform: translateY(-0.9px);
               margin-right: 3px;
-              font-size: 9px;
+              font-size: 10px;
             }
           }
           span{
             color: rgb(170, 170, 170);
-            font-size: 10px;
+            font-size: 12px;
             transform: translateX(4px) translateY(2px);
           }
         }
         .name{
-          font-size: 14px;
+          font-size: 19px;
           color: $txt;
-          font-weight: 500;
-          margin-bottom: 1px;
+          font-weight: 600;
         }
         .business-name{
           font-size: 11px;
           color: $txt;
           opacity: 0.7;
           font-weight: 500;
+          width: max-content;
+          padding: 3px;
+          margin: -2px;
+          transform: translateY(4px);
+          background: rgba(110,110,110,0.1);
+          border-radius: 4px;
+          margin-block: 3px 13px;
+        }
+        .address{
+          font-size: 14px;
+          color: $txt;
+          font-weight: 400;
+          margin-top: 1px;
+        }
+        .short-des{
+          margin-top: 5px;
+          font-size: 14px;
+          color: $txt;
+          opacity: 0.7;
+          i{
+            margin-right: 6px;
+            opacity: 0.75;
+            font-size: 13px;
+          }
         }
         &:hover{
-          .name{
-            text-decoration: underline;
-          }
+          background: white;
           .service-image{
             transition: .2s;
             filter: brightness(85%);
