--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -1,4 +1,5 @@
 #footer {
+  margin-top: 10px;
   width: 100%;
   height: 100%;
   padding-block: 8px;
@@ -39,8 +40,8 @@
   width: 100%;
   height: 40px;
   position: relative;
-  background: rgb(246, 246, 246);
-  padding-block: 16px;
+  background: rgb(252, 252, 252);
+  padding-block: 30px 32px;
 }
 #footer .footerbottom .social-icons {
   width: auto;
