--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -5,6 +5,7 @@ $txt: #183b56;
 
 // STANDARD PHONE
 #footer{
+    margin-top: 10px;
     width: 100%;
     height: 100%;
     padding-block: 8px;
@@ -56,8 +57,8 @@ $txt: #183b56;
         width: 100%;
         height: 40px;
         position: relative;
-        background: $white;
-        padding-block: 16px;
+        background: rgb(252,252,252);
+        padding-block: 30px 32px;
         // social icons
         .social-icons{
             width: auto;
