--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -82,7 +82,7 @@
   height: 110vh;
   position: absolute;
   top: 60px;
-  right: 0;
+  right: -100%;
   width: 100%;
   opacity: 0;
   pointer-events: none;
@@ -94,11 +94,9 @@
   z-index: 100000000000000000;
 }
 #mobileNav .sidebar.active {
-  top: 60px;
   right: 0;
   opacity: 1;
   pointer-events: visible;
-  transition: 0.5s;
 }
 #mobileNav .sidebar .sidebar-search {
   position: absolute;
@@ -149,7 +147,7 @@
   opacity: 0.8;
 }
 #mobileNav .sidebar .links {
-  padding-top: 60px;
+  padding-top: 69px;
 }
 #mobileNav .sidebar a {
   display: block;
