--- a/static/scss/store/product/product.css
+++ b/static/scss/store/product/product.css
@@ -1,69 +1,3 @@
-#footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#mobileNav {
-  position: absolute;
-  background: white;
-}
-
-.product-search {
-  position: absolute;
-  top: 47px;
-  width: 100%;
-  padding-inline: 15px;
-  padding-bottom: 15px;
-  padding-top: 25px;
-  text-align: center;
-  border-bottom: 1px solid rgba(40, 40, 40, 0.1);
-  z-index: 10000;
-  background: white;
-}
-.product-search.sticky {
-  position: fixed;
-  top: 0;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
-}
-.product-search form {
-  border: 1px solid rgb(234, 234, 234);
-  border-radius: 4px;
-  display: flex;
-}
-.product-search button {
-  border: none;
-  background: transparent;
-  position: absolute;
-  right: 39px;
-  top: 39px;
-  padding: 3px 8px;
-  margin: -3px -8px;
-  border-radius: 100%;
-  background: rgba(155, 155, 155, 0.22);
-}
-.product-search button i {
-  font-size: 15px;
-  color: rgba(24, 59, 86, 0.662745098);
-}
-.product-search input {
-  width: 85%;
-  height: 50px;
-  border: none;
-  outline: none;
-  padding: 7px;
-  background: white;
-  color: #183b56;
-  border-radius: 4px;
-  font-size: 15px;
-}
-.product-search input::-moz-placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
-.product-search input::placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
-
 .page .mapouter {
   width: 100%;
   height: 400px;
@@ -71,7 +5,7 @@
 
 .product-section {
   position: relative;
-  padding-top: 110px;
+  padding-top: 35px;
 }
 .product-section .carousel-control-prev {
   opacity: 1;
@@ -133,7 +67,7 @@
 }
 .product-section .quick-links.sticky {
   position: fixed;
-  top: 83px;
+  top: 60px;
   z-index: 10000;
 }
 .product-section .quick-links a {
@@ -542,7 +476,12 @@
   text-decoration: underline;
   cursor: pointer;
   color: #007bff;
-  margin-block: 4px;
+  width: 100%;
+  display: block;
+  margin-block: 6px;
+}
+.product-section #contactSec .contact a:first-child {
+  margin-top: 0;
 }
 
 @media only screen and (min-device-width: 1140px) {
