--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -52,8 +52,10 @@
               </div>
               {% endif %}
             </div>
+            {% if product.image2 %}   
             <a data-slide="prev" role="button" class="carousel-control-prev" href="#carouselExampleControls">&#10094;</a>
             <a data-slide="next" role="button" class="carousel-control-next" href="#carouselExampleControls">&#10095;</a>
+            {% endif %}
           </div>
 
           <div class="quick-links" id="quickLinks">
