--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -21,6 +21,10 @@
     <div class="logo" id="logo" onclick="window.location.href='/'">
         <img class="logo1" src="{% static '/images/logo/logo-long.png' %}" alt="logo1">
     </div>
+    <!-- Search -->
+    <i id="mobNavSearchIcon" class="fa-solid fa-magnifying-glass"></i>
+    <div class="search">
+    </div>
     <!-- HAMBURGER -->
     <div class="hamburger" id="hamburger" onclick="menu()">
         <span class="upper-span"></span>
