--- a/apps/core/templates/core/search-results.html
+++ b/apps/core/templates/core/search-results.html
@@ -37,7 +37,7 @@
             <div class="no-results">
                 <i class="fa-regular fa-face-sad-tear"></i>
                 <h1>Søket ditt ga 0 resultater</h1>
-                <p>Endre søket ditt, og prøv igjen</p>
+                <p>Søket ditt er: {{query}}</p>
                 <div class="no-results-search">
                     <form id="searchFormNoResults" action="{% url 'home_page_search' %}" method="GET">
                        {% csrf_token %}
