--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -8,7 +8,7 @@
 <script rel="stylesheet" src="{% static '/js/allpr.js' %}" type="text/javascript"></script>
 
 <div class="page">
-    <p class="allpr-q" id="allPrQ">Alle tjenestene</p>
+    <p class="allpr-q" id="allPrQ">Alle tjenestene - {{count}} tilsammen</p>
 
     <div class="services">
         {% for product in products %}
