--- a/static/scss/page/business.css
+++ b/static/scss/page/business.css
@@ -1,43 +1,22 @@
-#footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#mobileNav {
-  position: absolute;
-  background: white;
-}
-#mobileNav::before {
-  display: none;
-}
-#mobileNav.sticky {
-  position: fixed;
-}
-#mobileNav.sticky::before {
-  display: none;
-}
-
 #desNav #desNavBusinessLink {
   color: #06c484;
 }
 
 .page #businessQ {
-  position: absolute;
-  top: 66px;
+  position: fixed;
+  top: 60px;
   left: 0;
   width: 100%;
   height: auto;
-  background: #06c484;
-  color: rgb(246, 246, 246);
-  font-size: 14px;
-  padding: 10px 18px;
-  font-weight: 500;
+  background: white;
+  color: #183b56;
+  font-size: 17px;
+  padding: 11px 18px;
+  padding-top: 13px;
+  font-weight: 400;
   z-index: 10000;
   text-align: left;
-}
-.page #businessQ.sticky {
-  position: fixed;
-  top: 66px;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  border-block: 1px solid rgba(100, 100, 100, 0.22);
 }
 .page .business {
   padding-top: 155px;
