--- a/static/scss/page/policy.css
+++ b/static/scss/page/policy.css
@@ -17,23 +17,20 @@
 }
 
 .page #policyQ {
-  position: absolute;
-  top: 66px;
+  position: fixed;
+  top: 60px;
   left: 0;
   width: 100%;
   height: auto;
-  background: #06c484;
-  color: rgb(246, 246, 246);
-  font-size: 14px;
-  padding: 10px 18px;
-  font-weight: 500;
+  background: white;
+  color: #183b56;
+  font-size: 17px;
+  padding: 11px 18px;
+  padding-top: 13px;
+  font-weight: 400;
   z-index: 10000;
   text-align: left;
-}
-.page #policyQ.sticky {
-  position: fixed;
-  top: 66px;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  border-block: 1px solid rgba(100, 100, 100, 0.22);
 }
 .page .policy {
   position: relative;
