--- a/static/scss/page/vilkår.scss
+++ b/static/scss/page/vilkår.scss
@@ -3,42 +3,23 @@ $white: rgb(246,246,246);
 $primBtn: #06c484;
 $txt: #183b56;
 
-#footer{
-    border-top: 1px solid rgba(0,0,0,0.1);
-  }
-  #mobileNav{
-    position: absolute;
-    background: white;
-    &::before{
-        display: none;
-    }
-    &.sticky{
-        position: fixed;
-        &::before{
-            display: none;
-        }
-    }
-  }
 
 .page{
     #vilkårQ{
-        position: absolute;
-        top: 66px;
+        position: fixed;
+        top: 60px;
         left: 0;
         width: 100%;
         height: auto;
-        background: $primBtn;
-        color: $white;
-        font-size: 14px;
-        padding: 10px 18px;
-        font-weight: 500;
+        background: white;
+        color: $txt;
+        font-size: 17px;
+        padding: 11px 18px;
+        padding-top: 13px;
+        font-weight: 400;
         z-index: 10000;
         text-align: left;
-        &.sticky{
-          position: fixed;
-          top: 66px;
-          box-shadow: 0 0 4px rgba(5,5,5,0.12);
-        }
+        border-block: 1px solid rgba(100,100,100,0.22);
     }
     .vilkår{
         position: relative;
