--- a/static/scss/store/product/category.css
+++ b/static/scss/store/product/category.css
@@ -1,93 +1,18 @@
-#footer {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#mobileNav {
-  position: absolute;
-  background: white;
-}
-#mobileNav::before {
-  display: none;
-}
-#mobileNav.sticky::before {
-  display: none;
-}
-
-.category-search {
-  position: absolute;
-  top: 55px;
-  width: 100%;
-  padding-inline: 15px;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  text-align: center;
-  border-bottom: 1px solid rgba(40, 40, 40, 0.1);
-  z-index: 10000;
-  background: white;
-}
-.category-search.sticky {
-  position: fixed;
-  top: 0;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
-}
-.category-search form {
-  border: 1px solid rgb(234, 234, 234);
-  border-radius: 4px;
-  display: flex;
-}
-.category-search button {
-  border: none;
-  background: transparent;
-  position: absolute;
-  right: 42px;
-  top: 29px;
-  padding: 3px 8px;
-  margin: -3px -8px;
-  border-radius: 100%;
-  background: rgba(155, 155, 155, 0.22);
-}
-.category-search button i {
-  font-size: 15px;
-  color: rgba(24, 59, 86, 0.662745098);
-}
-.category-search input {
-  width: 85%;
-  height: 50px;
-  border: none;
-  outline: none;
-  padding: 7px;
-  background: white;
-  color: #183b56;
-  border-radius: 4px;
-  font-size: 15px;
-}
-.category-search input::-moz-placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
-.category-search input::placeholder {
-  color: #183b56;
-  opacity: 0.8;
-}
-
 .category-q {
-  position: absolute;
-  top: 135px;
+  position: fixed;
+  top: 60px;
   left: 0;
   width: 100%;
   height: auto;
-  background: #06c484;
-  color: rgb(246, 246, 246);
-  font-size: 14px;
-  padding: 10px 18px;
-  font-weight: 500;
+  background: white;
+  color: #183b56;
+  font-size: 17px;
+  padding: 11px 18px;
+  padding-top: 13px;
+  font-weight: 400;
   z-index: 10000;
   text-align: left;
-}
-.category-q.sticky {
-  position: fixed;
-  top: 81px;
-  box-shadow: 0 0 4px rgba(5, 5, 5, 0.12);
+  border-block: 1px solid rgba(100, 100, 100, 0.22);
 }
 
 .page .no-pr {
@@ -97,22 +22,27 @@
   padding-left: 9px;
 }
 .page .categories {
-  padding-top: 195px;
-  display: flex;
-  flex-wrap: wrap;
+  padding-top: 128px;
+  padding-inline: 12px;
+  padding-bottom: 8px;
+  margin-bottom: 10px;
 }
 .page .categories .service {
   flex: 1 auto;
   flex: 44%;
-  max-width: 167px;
+  max-width: 420px;
   height: -moz-min-content;
   height: min-content;
-  padding: 0;
-  margin: 20px 10px;
+  margin: 35px 0;
+  padding: 4px;
+  border-radius: 4px;
+}
+.page .categories .service:first-child {
+  margin-top: 0;
 }
 .page .categories .service .service-image {
   width: 100%;
-  height: 105px;
+  height: 195px;
   -o-object-fit: cover;
      object-fit: cover;
   filter: brightness(90%);
@@ -126,33 +56,57 @@
 .page .categories .service .reviews p {
   margin-bottom: 0;
   color: #FFBC55;
-  font-size: 11px;
+  font-size: 13px;
   margin-top: 1px;
 }
 .page .categories .service .reviews p i {
   transform: translateY(-0.9px);
   margin-right: 3px;
-  font-size: 9px;
+  font-size: 10px;
 }
 .page .categories .service .reviews span {
   color: rgb(170, 170, 170);
-  font-size: 10px;
+  font-size: 12px;
   transform: translateX(4px) translateY(2px);
 }
 .page .categories .service .name {
-  font-size: 14px;
+  font-size: 19px;
   color: #183b56;
-  font-weight: 500;
-  margin-bottom: 1px;
+  font-weight: 600;
 }
 .page .categories .service .business-name {
   font-size: 11px;
   color: #183b56;
   opacity: 0.7;
   font-weight: 500;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 3px;
+  margin: -2px;
+  transform: translateY(4px);
+  background: rgba(110, 110, 110, 0.1);
+  border-radius: 4px;
+  margin-block: 3px 13px;
 }
-.page .categories .service:hover .name {
-  text-decoration: underline;
+.page .categories .service .address {
+  font-size: 14px;
+  color: #183b56;
+  font-weight: 400;
+  margin-top: 1px;
+}
+.page .categories .service .short-des {
+  margin-top: 5px;
+  font-size: 14px;
+  color: #183b56;
+  opacity: 0.7;
+}
+.page .categories .service .short-des i {
+  margin-right: 6px;
+  opacity: 0.75;
+  font-size: 13px;
+}
+.page .categories .service:hover {
+  background: white;
 }
 .page .categories .service:hover .service-image {
   transition: 0.2s;
