--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -125,7 +125,7 @@ map.addSource('places', {
       'type': 'FeatureCollection',
       'features': [
          '{% for product in map_products %}',
-         '{% if map_products.address %}' ,
+         '{% if product.address %}' ,
    {
    'type': 'Feature',
    'properties': {
