--- a/apps/core/templates/pages/legal/vilkår.html
+++ b/apps/core/templates/pages/legal/vilkår.html
@@ -27,7 +27,7 @@
                 <br>
                 <br>
                 Vi forbeholder oss retten til å endre eller fjerne innholdet på nettstedet uten varsel.
-                Disse vilkårene og betingelsene kan endres. Dette vil du få varseø om. 
+                Disse vilkårene og betingelsene kan endres. Dette vil du få varslet om. 
                 Ved å fortsette å bruke nettstedet etter endringer i vilkårene og betingelsene, godtar du å være bundet av de nye vilkårene og betingelsene.
             </p>
         </div>
