--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -5,10 +5,19 @@
 
 
 {% block content %}
-<meta name="description" property="og:description" content="{{product.description}}">
+<!-- SEO -->
+<meta name="description" content="{{product.description}} - {{product.category}} - Lillehammer">
 <meta name="author" content="{{product.business_name}}">
+<meta name="keywords" content="{{product.seo}}, Lillehammer Tjenester, Lillehamemr, Tjenester">
 <meta name="title" property="og:title" content="{{product.name}} | {{product.business_name}}">
-{% block title %}{{product.name}} | {{product.business_name}}{% endblock %}
+<meta property="og:title" content="{{product.name}}">
+{% block title %}{{product.name}} | {{product.business_name}} - Lillehammer Tjenester{% endblock %}
+<title>{{product.name}} | {{product.business_name}} - Lillehammer Tjenester</title>
+<meta property="og:type" content="website">
+<meta property="og:url" content="{{ request.get_full_path }}">
+<meta property="og:description" content="{{product.description}} - {{product.category}} - Lillehammer">
+
+<!-- Links and scripts -->
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/store/product/product.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/product.js' %}" type="text/javascript"></script>
@@ -16,6 +25,8 @@
 <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
 <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js'></script>
 <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
+
+
 
  <div class="page">
      <div class="product-section">
