--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <!-- Seo -->
+<title>Lillehammer Tjenester - Enkelt og grei løsning</title>
 <meta name="description" content="Hjemmesiden til Lillehammer Tjenester - Finn den tjensten du leter etter enkelt og greit">
 <meta name="author" content="Lillehamemr Tjenester">
 <meta name="keywords" content="Lillehammer, Fåberg, Øyer, Tretten, Vingrom, Tjenester i Lillehammer, Tjenester i Fåberg, Tjenester i Øyer, Tjenester i Tretten, Tjenester i Vingrom, Lillehammer Tjenester">
