--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -3,6 +3,9 @@
 
 
 {% block content %}
+<title>Om Lillehammer Tjenester</title>
+
+
 <link rel="stylesheet" href="{% static '/scss/page/about.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/about.js' %}" type="text/javascript"></script>
