--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -3,6 +3,8 @@
 
 
 {% block content %}
+<title>Alle tjenestene</title>
+
 <link rel="stylesheet" href="{% static '/scss/page/all-pr.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/allpr.js' %}" type="text/javascript"></script>
