--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<title>Om Lillehammer Tjenester</title>
+{% block title %} Om Lillehamemr Tjenester {% endblock %}
 
 
 <link rel="stylesheet" href="{% static '/scss/page/about.css' %}" type="text/css">
