--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -3,7 +3,8 @@
 
 
 {% block content %}
-<title>Alle tjenestene</title>
+{% block title %}Alle tjenestene{% endblock %}
+
 
 <link rel="stylesheet" href="{% static '/scss/page/all-pr.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
