--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -21,6 +21,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
 
+    <title>{% block title %}Lillehammer Tjenester - Enkelt og grei løsning{% endblock title %}</title>
     <base href="/">
     <meta name="theme-color" content="#ffffff">
 
